:lipstick: Inicio da construção da folha de estilo
Foi adicionado a fonte, o seletor universal e a cor de fundo.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
+}
+
+body {
+  background-color: hsl(216, 12%, 8%);
+
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
+  font-family: 'Overpass', sans-serif;
+  font-size: 15px;
 }
 
 .attribution a {
